<resources>
    <string name="app_name">Controle de Combustível</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_atual">Km Atual</string>
    <string name="litros">Litros Abastecidos</string>
    <string name="date">Data do Abastecimento</string>
    <string name="posto">Bandeira do Posto</string>
    <string name="salvar">Salvar</string>
    <string name="lista">Listar</string>
    <string-array name="postos" translatable="false">
        <item>Texaco</item>
        <item>Shell</item>
        <item>Petrobras</item>
        <item>Ipiranga</item>
    </string-array>
    <string name="erro_vazio">Este campon não pode estar vazio.</string>
    <string name="erro_km">Km deve ser maior que o último inserido.</string>
    <string name="erro_salvar">Falha ao salvar.</string>
    <string name="toast_salvar">Salvo com sucesso.</string>
    <string name="excluir">Gostaria de deletar este registro?</string>
    <string name="aviso">Esta ação é permanente e não pode ser desfeita.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="quilometragem">Quilometragem</string>
</resources>
